fix: styles post version mobile

--- a/src/app/pages/posts/[id]/post.css
+++ b/src/app/pages/posts/[id]/post.css
@@ -7,15 +7,25 @@
   flex-direction: column;
   align-items: center;
   margin: 16px 0;
+  width: 100%;
+
+
 }
 
 .article__content {
   background-color: #242424;
-  width: 1024px;
+ 
+  width: 100%;
   color: #dfdfdf;
   display: flex;
   flex-direction: column;
-  padding: 32px;
+  padding: 16px;
+  
+
+  @media (min-width: 1024px) {
+    width: 1024px;
+    padding: 32px;
+  }
 }
 
 .article__content h2 {
